fixed card-small text overflowing

--- a/css/styles.css
+++ b/css/styles.css
@@ -276,12 +276,19 @@ h4 {
 .card-small img {
   width: 50%;
   height: 100%;
+  border-radius: 5px 0 0 5px;
 }
 
 .card-small-text {
   display: flex;
   flex-direction: column;
   margin: 0.5rem 0 0 1rem;
+  width: 50%;
+}
+
+.card-small-text h3,
+.card-small-text p {
+  font-size: 100%;
 }
 
 .blog-card {
@@ -450,6 +457,7 @@ h4 {
 .card-image {
   width: 100%;
   height: 200px;
+  border-radius: 5px 5px 0 0;
 }
 
 .blog-page-banner {
